--- a/specs/anoncreds1/anoncreds.tex
+++ b/specs/anoncreds1/anoncreds.tex
@@ -705,7 +705,7 @@ $$
  \subsection{25 April 2022 (version 0.6)}
  \begin{itemize}
      \item Proof that n is a product of two safe primes in Section 4.3.1
-     \item Removed optional word from Issuer signature correctness proof
+     \item Issuer correctness proof no longer considered optional
  \end{itemize}
  \subsection{20 Jun 2019 (version 0.5)}
  \begin{itemize}
