fixes some formatting
Signed-off-by: CamP <caeparra@gmail.com>

--- a/specs/anoncreds1/anoncreds.tex
+++ b/specs/anoncreds1/anoncreds.tex
@@ -284,8 +284,8 @@ c_p/(c_{\tilde{p}}^2g) = h^{\varepsilon} \; \land \; c_q/(c_{\tilde{q}}^2g) = h^
 \rho \in \mathtt{psuedoprime(t)} \; \land \; \xi \in \mathtt{psuedoprime(t)} \;
 \}
 \end{align}
-where t
-and 
+where $t$ is the bases used in the  the Lehmann-primality tests. 
+\\\\and then computes
 $$
 \widehat{Z} \leftarrow Z^{-c} S^{\widehat{x_Z}}\pmod{n} ;\quad  \{\widehat{R_i} 
 \leftarrow R_i^{-c} S^{\widehat{x_{R_i}}}\pmod{n}\}_{1\leq i \leq l};
