--- a/specs/anoncreds1/anoncredsmain.tex
+++ b/specs/anoncreds1/anoncredsmain.tex
@@ -13,7 +13,7 @@
 \newcommand{\fullpaper}{}
 
 \title{Anonymous credentials with type-3 revocation}
-\author{Dmitry Khovratovich, Michael Lodder Cam Parra}
+\author{Dmitry Khovratovich, Michael Lodder, Cam Parra}
 \date{25 April 2022, version 0.6}
 
 \begin{document}
