--- a/specs/anoncreds1/anoncredsmain.tex
+++ b/specs/anoncreds1/anoncredsmain.tex
@@ -10,11 +10,15 @@
 
 \usepackage{enumitem}
 
+\usepackage[backend=biber,style=alphabetic, maxbibnames=20,firstinits=true,sorting=none]{biblatex} 
+%\usepackage[backend=biber,style=numeric,autocite=plain,sorting=none]{biblatex}
+\addbibresource{anoncreds1.bib}
+
 \newcommand{\fullpaper}{}
 
 \title{Anonymous credentials with type-3 revocation}
 \author{Dmitry Khovratovich, Michael Lodder, Cam Parra}
-\date{25 April 2022, version 0.6}
+\date{07 Oct 2022, version 0.7}
 
 \begin{document}
 
